# demo-FastApi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py
app/api/: routes.py
app/api/common/: routes.py
app/api/common/status/: apis.py
app/api/search/: apis.py
app/common/depends/: get_redis_session.py  throttle.py
app/common/exceptions/: db_session.py
app/common/utils/: version.py
app/crud/: employee.py
app/models/: models.py
app/schemas/: employee.py
app/setup/: database.py  redis_client.py  setting.py
docker/: dev.Dockerfile  dev.docker-compose.yml
