[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
include = '\.pyi?$'
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["hootpy <dev@hootpy.com>"]
description = ""
name = "test app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncpg = "^0.29.0"
fastapi = "^0.105.0"
httpx = "^0.26.0"
psycopg2-binary = "^2.9.6"
pydantic-settings = "^2.1.0"
python = "^3.11"
redis = "^5.0.1"
sqlakeyset = "^2.0.1701229837"
sqlalchemy = "^2.0.16"
toml = "^0.10.2"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
ruff = "^0.1.9"
toml-sort = "^0.23.1"
types-toml = "^0.10.8.7"
